2015-04-12	--	v0.0.1	-- Initial release.
2015-04-12	--	v0.1.0	-- First code commit
2015-04-12	--	v0.2.0	-- Change on requirements, package extension, etc.
2015-04-12	--	v0.2.1	-- Added module field
2015-04-12	--	v0.2.2	-- Updated requirements
2015-06-19	--	v0.3.0	-- Updated progress functions and history field
2015-06-19	--	v0.3.1	-- Version merge
2015-06-19	--	v0.3.1a	-- Updated classifier for Windows
2015-06-19	--	v0.3.2	-- Bugfix
2015-06-19	--	v0.3.3	-- Small enhancements
2015-11-12	--	v0.3.4-stable	-- Minor changes
2015-11-12	--	v0.3.5-stable	-- Change merge
2015-11-12	--	v0.3.5a-stable	-- build tools update
2015-11-13	--	v0.3.6-stable	-- misc
2015-11-13	--	v0.3.7-stable	-- Added tbx as a dependency
2015-11-13	--	v0.3.8-stable	-- Deb dependencies update
2016-02-14	--	v0.4.0-stable	-- Timeout + TTL fields on job class

2016-02-12	--	v0.5.0-stable	-- New Timeout + TTL features + Client information upload + Client Status
2016-02-15	--	v0.5.1	-- Fix
2016-02-25	--	v0.5.3	-- fix
2016-02-25	--	v0.5.4	-- fix 
2016-03-22	--	v0.6.0	-- Added Client UUID+HOSTNAME + SYSTEM STATUS
2016-04-06	--	v0.7.0	-- Added job task and small changes
2016-05-02	--	v0.7.1	-- Fix
2016-12-17	--	v0.8.0	-- Plenty of changes about logs, status, etc.
2016-12-22	--	v0.8.1	-- Mini fix on utc datetime usage
2016-12-23	--	v0.8.2	-- Debian packaging fix
2016-12-23	--	v0.8.3	-- Small improvment to allow easier update
2016-12-29	--	v0.8.4	-- Small addon
2017-01-03	--	v0.9.0	-- Removed examples from standard job file. Minor fixes. Better task logging.
2017-02-13	--	v0.9.1	-- Small addon for logging warning messages on task